# pronouner

./: Cargo.toml  LICENSE  README.md
examples/: characters.json  dictionary.json  simple.rs
examples/assets/: conversation.xyr
src/: character.rs  dialog_parser.rs  lib.rs  verbs.rs
tests/: dialogues.xyr  people.json
