[package]
name = "pronouner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["std", "derive"] }
serde_json = "1.0.95"
smallvec = "1.10.0"

[[example]]
name = "simple"
path = "examples/simple.rs"
